# modular-method-package

./: .OverBiggerFields.sage.swp  .gitignore  KrausMethod.sage  QuotientIterators.sage  README.md  TODO  TODO.md  To implement for OrderQuotientRing  UsefullMethods.sage  VariableRestrictions  commands.sed  compile-mac.sh  compile.sh  conditional.sage  counting.sage  index.org  load.sage  magmaforms.REMOVED.git-id  magmatmp.m  magmatmp.m~  setup.cfg  setup.py  test.sh  tested cases  tested cases~  tmp
L-functions/: Euler factors.sage  loadall.sage
Tates_algorithm/: TatesAlgorithm.sage  loadall.sage
database/: Bennett-Chen-2012.rst  Bennett-Chen-Dahmen-Yazdani-2014.rst  Darmon-Merel-1997.rst  Dieulefait-Freitas-2014.rst  Dieulefait-Urroz-2009.rst  Ellenberg-2002.rst  three-fourth-powers.rst
diophantine_equations/: Frey_curve_construction.sage  conditional.sage  conditions.sage  diophantine_tools.sage  loadall.sage  newform_elimination.sage  prime_power.sage
elliptic_curves/: Q-curves.sage  conjugate.sage  frey_curves.sage  loadall.sage  tates_algorithm.sage  twist.sage
examples/: Dieulefait.sage  L-functions.sage  OverBiggerFields.sage  Q-curve examples.sage  Q-curve families.sage  Q-curve tests.sage  Q-curve with 2-isogeny.sage  Quer_test.sage  SpecialCurve.sage  counter example alpha in OK.sage  frey curve conductor.sage  frey_curve_calculator.sage  scr.sage  test.sage  test1.sage  three_four_code.sage  tmp.sage  tmp2.sage  tmpFLT.sage
group cohomology/: calculations.sage  loadall.sage
linear algebra/: loadall.sage  matrix operations.sage  solver.sage
(+200 files in other folders)
