[metadata]
name = modular-method-package
version = 1.0.0
author = Joey van Langen
author_email = j.m.van.langen@outlook.com
description = Tools for SageMath to automate the modular method
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmvlangen/modular-method-package
classifiers =
    Programming Language :: Python :: 3
    Framework :: SageMath :: 9.1
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7